<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".fragment.FaqFragment">

    <TextView
        android:id="@+id/txtQ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_1"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/txtA1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_1"
        android:layout_below="@id/txtQ1"
        android:textColor="#000000"
        android:textSize="16sp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:padding="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/txtA1"
        android:background="#7B8788"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/txtQ2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_2"
        android:textColor="@color/colorPrimary"
        android:layout_below="@id/txtA1"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/txtA2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_2"
        android:textColor="#000000"
        android:layout_below="@id/txtQ2"
        android:textSize="16sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/txtA2"
        android:background="#7B8788"
        android:orientation="horizontal" />


    <TextView
        android:id="@+id/txtQ3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_3"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_below="@id/txtA2"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/txtA3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtQ3"
        android:text="@string/answer_3"
        android:textColor="#000000"
        android:textSize="16sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/txtA3"
        android:background="#7B8788"
        android:orientation="horizontal" />


    <TextView
        android:id="@+id/txtQ4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtA3"
        android:text="@string/question_4"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/txtA4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtQ4"
        android:text="@string/answer_4"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/txtA4"
        android:background="#7B8788"
        android:orientation="horizontal" />


    <TextView
        android:id="@+id/txtQ5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtA4"
        android:text="@string/question_5"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/txtA5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtQ5"
        android:text="@string/answer_5"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="8dp"/>

    <RelativeLayout
        android:id="@+id/progressLayoutFAQ"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</RelativeLayout>