<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context = ".activity.RegisterActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayoutRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:drawableLeft="@drawable/ic_name"
        android:hint="@string/name"
        android:maxLines="1"
        android:padding="6dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etName"
        android:background="@color/colorWhite"
        android:layout_marginTop="5dp"
        android:padding="6dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/email_address"
        android:inputType="textWebEmailAddress"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/etMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:background="@color/colorWhite"
        android:layout_marginTop="5dp"
        android:padding="6dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:drawableLeft="@drawable/ic_action_name"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="10"/>

    <EditText
        android:id="@+id/etDelivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etMobile"
        android:background="@color/colorWhite"
        android:layout_marginTop="5dp"
        android:padding="6dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:drawableLeft="@drawable/ic_delivery"
        android:hint="Delivery Address"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etDelivery"
        android:background="@color/colorWhite"
        android:layout_marginTop="5dp"
        android:padding="6dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:drawableLeft="@drawable/ic_lock"
        android:hint="@string/password_min"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/etConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPass"
        android:background="@color/colorWhite"
        android:layout_marginTop="5dp"
        android:padding="6dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:drawableLeft="@drawable/ic_lock"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etConfirmPass"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="6dp"
        android:text="Register"
        android:textColor="@color/colorWhite"
        android:background="@color/colorButton"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <RelativeLayout
        android:id="@+id/progressLayoutRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>


</RelativeLayout>