<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.ForgotPassword">

    <ImageView
        android:id="@+id/imgFoodRunnerLogo"
        android:layout_width="240dp"
        android:layout_height="160dp"
        android:src="@drawable/food_runner_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/txtInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgFoodRunnerLogo"
        android:layout_margin="10dp"
        android:padding="6dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/instruction"/>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtInstruction"
        android:background="@color/colorWhite"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:padding="6dp"
        android:drawableLeft="@drawable/ic_action_name"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPhone"
        android:background="@color/colorWhite"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="6dp"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/email_address"
        android:inputType="textWebEmailAddress"
        android:maxLines="1"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmailAddress"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="6dp"
        android:background="@color/colorButton"
        android:text="Next"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <RelativeLayout
        android:id="@+id/progressLayoutForgotPass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</RelativeLayout>